# termart

./: .gitignore  .gitmodules  AGENTS.md  AUDIT-REVIEW.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/commands/: index.md  save.md
.claude/hooks/: common.sh  post-tool-use  session-end
.github/workflows/: ci.yml  release.yml
.opencode/command/: index.md  save.md
.opencode/plugin/: asha-hooks.ts.backup.20251226233112
Memory/: activeContext.md  communicationStyle.md  projectbrief.md  techEnvironment.md  workflowProtocols.md
Memory/events/: eval_history.jsonl  events.jsonl  patterns.json  save-preflight.jsonl
Memory/events/archive/: events-2026-03.jsonl
Memory/reasoning_bank/: patterns.db
Memory/sessions/: current-session.md
Memory/sessions/archive/: session-2025-12-17_13-03.md  session-2025-12-18_02-48.md  session-2025-12-18_12-54.md  (+35 more)
Memory/vector_db/: .index_state.json  chroma.sqlite3  chroma.sqlite3-journal
src/: bonsai.rs  colors.rs  config.rs  evdev_util.rs  fah.rs  fractal.rs  help.rs  main.rs  net_geo.rs  pomodoro.rs  settings.rs  terminal.rs  weather.rs
src/monitor/: cpu.rs  disk.rs  diskio.rs  docker.rs  gpu.rs  layout.rs  mem.rs  mod.rs  net.rs  ps.rs
src/tui/: cover.rs  mod.rs  mpris_client.rs
src/viz/: audio.rs  clock.rs  codex_tokens.rs  cube.rs  donut.rs  dygma.rs  fire.rs  fractal.rs  globe.rs  hex.rs  hypercube.rs  invaders.rs  keyboard.rs  life.rs  lissajous.rs  matrix.rs  mod.rs  pipes.rs  plasma.rs  pong.rs  rain.rs  sunlight.rs  tokeneater.rs  tui_control.rs  tui_cover.rs  usage.rs  waves.rs
tests/: smoke_test.rs
