[package]
name = "termart"
version = "0.1.0"
edition = "2021"
description = "Terminal-based generative art: bonsai trees and fractals"
authors = ["Terminal Art Generator"]
license = "MIT"

[dependencies]
crossterm = "0.28"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
evdev = "0.12"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
