[package]
name = "termart"
version = "0.1.0"
edition = "2021"
description = "Terminal-based generative art: bonsai trees and fractals"
authors = ["Terminal Art Generator"]
license = "MIT"

[dependencies]
crossterm = "0.28"
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
urlencoding = "2.1"
sha2 = { version = "0.10", features = ["oid"] }
pbkdf2 = "0.12"
base64 = "0.22"
evdev = "0.12"
libc = "0.2"
tungstenite = { version = "0.21", features = ["native-tls"] }
native-tls = "0.2"
rsa = { version = "0.9", features = ["sha2"] }
aes = "0.8"
cbc = "0.1"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
